<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat_list">

    <fragment
        android:id="@+id/navigation_chat_list"
        android:name="com.sergey.zhuravlev.mobile.social.ui.chat.ChatListFragment"
        android:label="@string/title_chat_list"
        tools:layout="@layout/fragment_chat_list" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.sergey.zhuravlev.mobile.social.ui.search.SearchProfileFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_profile" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sergey.zhuravlev.mobile.social.ui.current.CurrentProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_current_profile" />

</navigation>